--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,4 +7,5 @@
     <string name="network_name">Network Name</string>
     <string name="ssid">SSID</string>
     <string name="network_type">Network Type</string>
+    <string name="enter_password">Password</string>
 </resources>
