--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -9,4 +9,5 @@
     <string name="network_type">Network Type</string>
     <string name="enter_password">Password</string>
     <string name="generate_qr_code">Generate QR Code</string>
+    <string name="no_encription">No encription</string>
 </resources>
